src/db/migration/sea_orm/timestamp/snapshots/roadster__db__migration__sea_orm__timestamp__tests__add_update_timestamp_function@case_01.snap
---
source: src/db/migration/sea_orm/timestamp/mod.rs
expression: statement
---
Some(
    Statement {
        sql: "\nCREATE OR REPLACE FUNCTION update_timestamp_updated_at() RETURNS TRIGGER AS $$\nBEGIN\n    NEW.updated_at = NOW();\n    RETURN NEW;\nEND;\n$$ language 'plpgsql';\n",
        values: None,
        db_backend: Postgres,
    },
)
